--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,171 @@
 body{
-	font-family: 'dancin script',cursive;
+	font-family: 'dancing script',cursive;
 	background-color:#02010a;
 }
 header#encabezado{
 	background-color: #5b7989;
 	border-radius: 10px 10px 0px 0px;
 	width: 100%;
-
-
-
-
+	animation: slideIn 1s;
 
 }
+h1{
+	color: white;
+	text-shadow: 2px 2px 2px #02010a;
+	font-size: 2em;
+}
+a.enlace{
+  color: white;
+  margin: 10px;
+}
+a:visited{
+  color: white;
+}
+a.active{
+  text-decoration: none;
+}
+
+  #principal {
+  	background-color:  #82c3a6;
+  	text-align: center;
+}
+
+  #img-principal{
+  width: 90%;
+  margin: 1% 1%;
+  border: 1px solid #02010a;
+  box-shadow: 2px 2px 2px #02010a;
+}
+
+#secundario{
+  background-color: #d5c75f;
+  border: 1px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.secundaria{
+  width: 50%;
+  margin: 4% auto;
+
+}
+
+.secundaria img{
+  border: 1px solid red;
+  box-shadow: 2px 2px 2px #02010a;
+
+}
+
+#imgizq{
+	transition: transform 1s;
+}
+#imgizq:hover{
+transform: rotate(10deg);
+box-shadow: 2px 2px 2px #82c3a6;
+border:2px solid #02010a;
+}
+#imgder{
+	transition: transform 1s;
+}
+#imgder:hover{
+transform: translate(20px, 5px);
+box-shadow: 2px 2px 2px #82c3a6;
+border: 2px solid #02010a;
+}
+
+
+
+@-webkit-keyframes slideIn {
+  0%{
+    margin-top: 150%;
+  }
+  60%{
+    margin-top: -5%;
+  }
+  100%{
+    margin-top: 0%;
+  }
+}
+
+
+footer{
+  background-color: #C6D5C5;
+  text-align: center;
+  border-radius: 0px 0px 10px 10px;
+}
+
+
+
+@media (min-width:900px) {
+
+  #encabezado{
+    height: 100px;
+  }
+
+  .contenedor{
+    width: 900px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  h1{
+    float: left;
+    margin-left: 20px;
+  }
+
+  #menu-principal{
+    float: right;
+    line-height: 100px;
+    font-size: 20px;
+  }
+
+  footer{
+    display: flex;
+    flex-direction: row;
+  }
+footer div{
+	margin: 10px auto;
+	
+}
+
+
+  footer div{
+    margin: 10px auto;
+  }
+}
+
+
+/*Version Movil*/
+@media (max-width:899px) {
+  .contenedor{
+    width: 100%;
+  }
+  #encabezado{
+    text-align: center;
+    clear: both;
+  }
+  #menu-principal{
+
+    padding-bottom: 10px;
+  }
+  #secundario{
+    flex-flow: column;
+    text-align: center;
+  }
+  .secundaria{
+    width: 90%;
+  }
+  .secundaria img{
+    width: 100%;
+  }
+
+  footer{
+    display: flex;
+    flex-direction: column;
+  }
+  #derechos{
+    margin-bottom: 15%;
+  }
+}
+
+
