--- a/css/paisajes.css
+++ b/css/paisajes.css
@@ -6,17 +6,79 @@ header#encabezado{
 	background-color: #5b7989;
 	border-radius: 10px 10px 0px 0px;
 	width: 100%;
+	animation: slideIn 1s;
 }
 
-.contenedor{
-    width: 900px;
-    text-align: center;
-    margin: 0 auto;
-  }
-
-#imgizq{
-	padding: 20px;
+h1{
+	color: white;
+	text-shadow: 2px 2px 1px #02010a;
+	font-size: 2em;
+}
+a.enlace{
+	color: white;
 	margin: 10px;
-	width: 50%;
-	height: 50%;
 }
+a:visited{
+	color: white;
+}
+a.active{
+	text-decoration: none;
+}
+#principal{
+	background-color: #d5c75f;
+	border: 1px;
+	display: flex;
+	flex-flow: row wrap;
+}
+
+
+footer{
+	background-color: #60D5C5;
+	text-align: center;
+	border-radius: 0px 0px 10px 10px;
+}
+#principal img:nth-child(even){
+	-webkit-filter:grayscale(90%);
+}
+#desenfocada{
+	-webkit-filter:blur(10px);
+}
+
+#principal img:nth-child(3){
+	-webkit-filter:sepia(90%);
+}
+
+@-webkit-keyframes slideIn {
+  0%{
+    margin-top: 150%;
+
+   }
+   60%{
+   	margin: top:-5%;
+   }
+   100%{
+   	margin: top 0%;;
+   }
+ }
+
+ @media (min-width:900px) {
+
+  #encabezado{
+    height: 100px;
+  }
+ 
+ .contenedor{
+ 	width: 100px;
+ 	text-align: center;
+ 	margin: 0 auto;
+
+ }
+ h1{
+ 	float: left;
+ 	margin-left: 20px;
+ }
+ #menu-principal{
+ 	float: right;
+ 	line-height: 100px;
+ 	font-size: 20px;
+ }
