--- a/css/paisajes.css
+++ b/css/paisajes.css
@@ -1,7 +1,10 @@
-body{
+
+ body{
 	font-family: 'dancing script',cursive;
 	background-color:#02010a;
+	
 }
+
 header#encabezado{
 	background-color: #5b7989;
 	border-radius: 10px 10px 0px 0px;
@@ -9,76 +12,133 @@ header#encabezado{
 	animation: slideIn 1s;
 }
 
-h1{
-	color: white;
-	text-shadow: 2px 2px 1px #02010a;
-	font-size: 2em;
+h1#titulo{
+  color: white;
+  text-shadow: 2px 2px 1px #02010a;
+  font-size: 2em;
 }
+
 a.enlace{
-	color: white;
-	margin: 10px;
+  color: white;
+  margin: 10px;
 }
 a:visited{
-	color: white;
+  color: white;
 }
 a.active{
-	text-decoration: none;
-}
-#principal{
-	background-color: #d5c75f;
-	border: 1px;
-	display: flex;
-	flex-flow: row wrap;
+  text-decoration: none;
 }
 
+#principal{
+  background-color: #d5c75f;
+  border: 1px;
+  display: flex;
+  flex-flow: row wrap;
+}
 
 footer{
-	background-color: #60D5C5;
-	text-align: center;
-	border-radius: 0px 0px 10px 10px;
+  background-color: #C6D5C5;
+  text-align: center;
+  border-radius: 0px 0px 10px 10px;
 }
+
 #principal img:nth-child(even){
-	-webkit-filter:grayscale(90%);
+  -webkit-filter: grayscale(90%);
 }
+
+
 #desenfocada{
-	-webkit-filter:blur(10px);
+  -webkit-filter: blur(10px);
 }
-
 #principal img:nth-child(3){
-	-webkit-filter:sepia(90%);
+  -webkit-filter: sepia(90%);
 }
-
 @-webkit-keyframes slideIn {
   0%{
     margin-top: 150%;
-
-   }
-   60%{
-   	margin: top:-5%;
-   }
-   100%{
-   	margin: top 0%;;
-   }
- }
-
- @media (min-width:900px) {
+  }
+  60%{
+    margin-top: -5%;
+  }
+  100%{
+    margin-top: 0%;
+  }
+}
+@media (min-width:900px) {
 
   #encabezado{
     height: 100px;
   }
- 
- .contenedor{
- 	width: 100px;
- 	text-align: center;
- 	margin: 0 auto;
 
- }
- h1{
- 	float: left;
- 	margin-left: 20px;
- }
- #menu-principal{
- 	float: right;
- 	line-height: 100px;
- 	font-size: 20px;
- }
+  .contenedor{
+    width: 900px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  h1#titulo{
+    float: left;
+    margin-left: 20px;
+  }
+
+  #menu-principal{
+    float: right;
+    line-height: 100px;
+    font-size: 20px;
+  }
+
+  footer{
+    display: flex;
+    flex-direction: row;
+  }
+
+  footer div{
+    margin: 10px auto;
+  }
+
+  #principal{
+    flex-direction: row;
+    text-align: center;
+  }
+
+#principal img{
+    height: 30%;
+    width: 25%;
+    margin: 3% 4%;
+    box-shadow: 2px 2px 2px #02010a;
+  }
+}
+
+@media (max-width:899px) {
+  .contenedor{
+    width: 100%;
+  }
+  #encabezado{
+    text-align: center;
+    clear: both;
+  }
+  #menu-principal{
+
+    padding-bottom: 10px;
+  }
+  footer{
+    display: flex;
+    flex-direction: column;
+  }
+  #derechos{
+    margin-bottom: 15%;
+  }
+
+  #principal{
+    flex-direction: column;
+    text-align: center;
+  }
+
+#principal img{
+    width: 90%;
+    margin: 2% auto;
+  }
+
+
+}
+
